--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+   <main>
+    <div class="topside">
+    <span>DH</span> 
+   </div>
+    <div class="redbox">
+        <input type="text" placeholder="Search">
+        <button>Submit</button>
+    </div>
+  </main>
+   <div class="sidebar">
+    <div class="box"></div>
+    <div class="ball"></div>
+   </div>
+   <div class="hiddenball"></div>
 </body>
 </html>
